--- a/phone/index.html
+++ b/phone/index.html
@@ -12,9 +12,10 @@
 <body>
     <script>
         PhonePage.init({
-            height: '60vh',
+            height: '80vh',
             right: '20px'
         });
+        PhonePage.showPane('2e');
     </script>
 </body>
 
