--- a/phone/src/html/demo.html
+++ b/phone/src/html/demo.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/optiscroll.css">
-    <link rel="stylesheet" href="css/pagescroll.css">
-    <script src="optiscroll.min.js"></script>
+    <link rel="stylesheet" href="../css/css.min.css">
+    <script src="../js/optiscroll.min.js"></script>
 </head>
 
 <body>
@@ -19,7 +18,7 @@
         <br> dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
         <br> dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
         <a href="http://www.baidu.com">sddadsdasd</a>
-        <button onclick="javascript: alert(4355);">dssdfsf</button>
+        <button onclick="javascript: parent.PhonePage.showPane(123);">dssdfsf</button>
         <br> dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
         <br> dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
         <br> dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
@@ -252,7 +251,7 @@
         <br> dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
         <br>
     </div>
-    <script src="pagescroll.js?bindId=os1"></script>
+    <script src="../js/pagescroll.js?bindId=os1"></script>
 </body>
 
 </html>
