--- a/phone/src/index.html
+++ b/phone/src/index.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>手机模型测试页</title>
-    <script src="phone_page.js"></script>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
     <script>
         PhonePage.init({
-            height: '80vh',
-            right: '20px'
+            indexPage: 'html/demo.html'
         });
-        PhonePage.showPane('2e');
     </script>
 </body>
 
