--- a/phone/src/html/demo.html
+++ b/phone/src/html/demo.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div>sdffs</div>
+    <div>sdffs我让人4</div>
     <div id="os1" class="optiscroll">
         dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
         <br> dfgdfgfdgfdgdfgdgdfgfdfghgfhghfdgdfgfdgdfgdfgtertret4353dfgdfget543e5tfdgdg4543fdgfdgdcbbhfgete3
