--- a/phone/src/index.html
+++ b/phone/src/index.html
@@ -12,7 +12,8 @@
 <body>
     <script>
         PhonePage.init({
-            indexPage: 'html/demo.html'
+            indexPage: 'html/demo.html',
+            indexPageTitle: '宿达管理端'
         });
     </script>
 </body>
