--- a/phone/src/html/demo.html
+++ b/phone/src/html/demo.html
@@ -13,7 +13,7 @@
 <body>
     <div id="os1" class="optiscroll">
         <a href="http://www.baidu.com">百度一下</a><br><br>
-        <button onclick="javascript: parent.PhonePage.showPane('1fd23', 400, 600);">显示面板</button><br><br>
+        <button onclick="javascript: parent.PhonePage.showPane('测试显示面板，我是标题');">显示面板</button><br><br>
         <button onclick="javascript: parent.PhonePage.getPhoneWidth();">获取手机模型有效区域宽度</button><br><br>
         <button onclick="javascript: parent.PhonePage.getPhoneHeight();">获取手机模型有效区域高度</button><br><br>
     </div>
