--- a/partner/partner.html
+++ b/partner/partner.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/comm.js"></script>
     <script type="text/javascript" src="js/fkpagetransitions.js"></script>
+    <script type="text/javascript" src="js/picker.js"></script>
     <script>
         layui.config({
             base: 'modules/'
@@ -119,6 +120,7 @@
             <div class="page4_mind_map_wrap">
                 <div>
                     <span>佣金收益</span>
+                    <img src="resources/imgs/4_jinbi.png">
                 </div>
                 <div>
                     <span>汽车</span>
@@ -151,10 +153,65 @@
             <!-- 请在此处添加第 5 页代码 -->
             <span class="page_title">合作人福利</span>
             <img class="page5_dclogo" src="resources/imgs/dc_logo.png">
+            <div class="page5_item_wrap">
+                <span>先进人员配车</span>
+                <span>加盟股金收益</span>
+                <span>集团年会表彰</span>
+                <span>年度旅游奖励</span>
+                <span>职业经理人1V1辅导</span>
+                <span>职业经理人生涯规划</span>
+            </div>
         </li>
         <li class="pageItem pageItem6">
             <!-- 请在此处添加第 6 页代码 -->
-
+            <img class="page6_title_img" src="resources/imgs/6_title.png">
+            <div class="page6_step_wrap">
+                <span class="cur_selected">基本信息</span>
+                <span>扩展信息</span>
+                <span>上传照片</span>
+            </div>
+            <div class="page6_form_wrap">
+                <form action="">
+                    <div class="form_wrap step0 cur_selected">
+                        <span>基本信息</span>
+                        <input type="text" name="name" tip="真实姓名" placeholder="请输入真实姓名">
+                        <div class="picker" onclick="showTimeSelectPicker('选择性别', $(this).find('input'))">
+                            <input type="hidden" name="sex">
+                            <input type="text" readonly="readonly" tip="性别" placeholder="性别">
+                        </div>
+                        <input type="text" name="phone" tip="手机号" inputype="phone" placeholder="请输入手机号">
+                        <input type="text" name="idcard" tip="身份证" placeholder="请输入身份证">
+                    </div>
+                    <div class="form_wrap step1">
+                        <span>扩展信息</span>
+                        <div class="picker" onclick="showTimeSelectPicker('选择所在地址', $(this).find('input'))">
+                            <input type="hidden" name="address">
+                            <input type="text" class="picker" readonly="readonly" tip="所在地址" placeholder="请选择所在地址">
+                        </div>
+                        <div class="picker" onclick="showTimeSelectPicker('选择学历', $(this).find('input'))">
+                            <input type="hidden" name="education">
+                            <input type="text" class="picker" readonly="readonly" tip="学历" placeholder="请选择学历">
+                        </div>
+                        <div class="picker" onclick="showTimeSelectPicker('选择职业', $(this).find('input'))">
+                            <input type="hidden" name="profession">
+                            <input type="text" class="picker" readonly="readonly" tip="职业" placeholder="请选择职业">
+                        </div>
+                        <div class="picker" onclick="showTimeSelectPicker('选择出行方式', $(this).find('input'))">
+                            <input type="hidden" name="goway">
+                            <input type="text" class="picker" readonly="readonly" tip="出行方式" placeholder="请选择出行方式">
+                        </div>
+                    </div>
+                    <div class="form_wrap step2">
+                        <span>上传照片</span>
+                        <div class="img_upload">
+                            <span class="ripple"></span>
+                            <input type="file" accept="image/*" capture="camera" tip="头像照片">
+                            <span>点击头像，请上传两寸免冠照</span>
+                        </div>
+                    </div>
+                    <div class="form_btn ripple touchIgnore" onclick="toNextStep()">下一步</div>
+                </form>
+            </div>
         </li>
     </ul>
     <div class="pre-wrap-bottom">
