--- a/answer/index.html
+++ b/answer/index.html
@@ -35,11 +35,13 @@
         </div>
     </div>
     <div id="gameEndPage" class="gameEndPage">
-        <div class="gameStartTitle">
-            <img class="gameStartTitleImg" src="imgs/title.png">
+        <div class="gameEndTitle">
+            <img class="gameEndTitleImg" src="imgs/success.png">
         </div>
+        <span class="gameEndToCJ">马上去抽奖</span>
     </div>
-    <div id="gameTraiWrap" class="gameTraiWrap">
+    <div class="gameTraiWrapLimit">
+        <div id="gameTraiWrap" class="gameTraiWrap"></div>
     </div>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/data.js"></script>
