--- a/answer/index.html
+++ b/answer/index.html
@@ -38,7 +38,7 @@
         <div class="gameEndTitle">
             <img class="gameEndTitleImg" src="imgs/success.png">
         </div>
-        <span class="gameEndToCJ">马上去抽奖</span>
+        <span class="gameEndToCJ" onclick="toChouJ()">马上去抽奖</span>
     </div>
     <div class="gameTraiWrapLimit">
         <div id="gameTraiWrap" class="gameTraiWrap"></div>
