--- a/partner/partner.html
+++ b/partner/partner.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>大昌合伙人招募</title>
+    <title>大昌集团乡镇合伙人招募</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <link rel="stylesheet" type="text/css" href="css/weui.min.css" media="all" />
     <link rel="stylesheet" type="text/css" href="layui/css/layui.css" media="all" />
@@ -203,7 +203,7 @@
                         <div class="img_upload">
                             <input type="hidden" id="headimgBackPath" name="headimg">
                             <span class="ripple"></span>
-                            <input id="file" type="file" accept="image/*" capture="camera" tip="头像照片">
+                            <input id="file" type="file" accept="image/*" tip="头像照片">
                             <span>点击头像，请上传两寸免冠照</span>
                             <img id="userHeadImgShow" src="">
                         </div>
