--- a/game_model/index.html
+++ b/game_model/index.html
@@ -17,7 +17,8 @@
     <script>
         new GamePlugin({
             bgImg: 'http://img.zcool.cn/community/01ad9c5965c3f3a8012193a3959c43.jpg@2o.jpg',
-            fillColor: 'rgba(0, 0, 0, .8)'
+            fillColor: 'rgba(0, 0, 0, .8)',
+            playerControllerOffset: 'right'
         }).startGame().showController();
     </script>
 </body>
